update serverless error ProvisionedThroughput

--- a/serverless.yml
+++ b/serverless.yml
@@ -83,6 +83,6 @@ resources:
         KeySchema:
           - AttributeName: customerId
             keyType: HASH
-        provisionedThroughput:
+        ProvisionedThroughput:
           ReadCapacityUnits: 1
           WriteCapacityUnits: 1
