new serverless deploy get hero

--- a/serverless.yml
+++ b/serverless.yml
@@ -68,7 +68,7 @@ functions:
     timeout: 20
     events:
       - http:
-          path: Heros
+          path: heroes
           method: GET
           cors: true
 resources:
