load excel heroes

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@aws-sdk/client-dynamodb": "^3.145.0",
     "@aws-sdk/util-dynamodb": "^3.145.0",
     "aws-sdk": "^2.1194.0",
+    "excel4node": "^1.8.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^8.3.2"
   }
