--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@ provider:
   region: us-east-1
   environment:
     DYNAMO_TABLE_NAME: ${self:custom.heroTableName}
+    REGION: ${self:custom.region}
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -71,6 +72,16 @@ functions:
     events:
       - http:
           path: heroes
+          method: GET
+          cors: true
+  listHeroesExcel:
+    handler: hero/excelList.listHeroesExcel
+    name: get-excel-heroes
+    memorySize: 128
+    timeout: 20
+    events:
+      - http:
+          path: heroesExcel
           method: GET
           cors: true
 resources:
