pdf heroes list

--- a/package.json
+++ b/package.json
@@ -13,8 +13,16 @@
     "@aws-sdk/client-dynamodb": "^3.145.0",
     "@aws-sdk/util-dynamodb": "^3.145.0",
     "aws-sdk": "^2.1194.0",
+    "chrome-aws-lambda": "^10.1.0",
     "excel4node": "^1.8.0",
+    "fs": "^0.0.1-security",
+    "pug": "^3.0.2",
+    "puppeteer-core": "^16.1.0",
+    "puppeteer-serverless": "^2.0.0",
+    "serverless-bundle": "^5.4.0",
+    "serverless-deployment-bucket": "^1.6.0",
     "serverless-iam-roles-per-function": "^3.2.0",
+    "serverless-offline": "^9.2.0",
     "uuid": "^8.3.2"
   }
 }
