--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pug": "^3.0.2",
     "puppeteer-core": "^16.1.0",
     "puppeteer-serverless": "^2.0.0",
+    "serverless-apigw-binary": "^0.4.4",
     "serverless-bundle": "^5.4.0",
     "serverless-deployment-bucket": "^1.6.0",
     "serverless-iam-roles-per-function": "^3.2.0",
