--- a/serverless copy 2.yml
+++ b/serverless copy 2.yml
@@ -30,10 +30,28 @@ custom:
   bucketName: data-heroes
   excelFolder: xlsxFolder
   pdfFolder: pdfFolder
+  serverless-offline:
+    location: .webpack/service
+  apigwBinary:
+    types:
+      - "image/jpeg"
+      - "text/html"
+      - "application/pdf"
+      - "multipart/form-data"
   headers:
     - Content-Type
 plugins:
   - serverless-iam-roles-per-function
+  # - serverless-offline
+  # - serverless-deployment-bucket
+  # - serverless-bundle
+  - serverless-apigw-binary
+package:
+  exclude:
+    - pdf_generation/**
+layers:
+  pdfGeneration:
+    path: pdf_generation
 functions:
   getHero:
     handler: hero/get.getHero
@@ -95,16 +113,16 @@ functions:
           path: heroesExcel
           method: GET
           cors: true
-  # listHeroesPdf:
-  #   handler: hero/pdfList.listHeroesPdf
-  #   name: get-pdf-heroes
-  #   memorySize: 128
-  #   timeout: 20
-  #   events:
-  #     - http:
-  #         path: heroesPdf
-  #         method: GET
-  #         cors: true
+  listHeroesPdf:
+    handler: hero/pdfList.listHeroesPdf
+    name: get-pdf-heroes
+    memorySize: 128
+    timeout: 20
+    events:
+      - http:
+          path: heroesPdf
+          method: GET
+          cors: true
 resources:
   Resources:
     HerosTable:
