--- a/serverless.yml
+++ b/serverless.yml
@@ -37,7 +37,7 @@ plugins:
 functions:
   getHero:
     handler: hero/get.getHero
-    name: get-hero-v1
+    name: get-hero
     memorySize: 128
     timeout: 20
     events:
@@ -47,7 +47,7 @@ functions:
           cors: true
   createHero:
     handler: hero/create.createHero
-    name: create-hero-v1
+    name: create-hero
     memorySize: 128
     timeout: 20
     events:
@@ -57,7 +57,7 @@ functions:
           cors: true
   updateHero:
     handler: hero/update.updateHero
-    name: update-Hero-v1
+    name: update-Hero
     memorySize: 128
     timeout: 20
     events:
@@ -67,7 +67,7 @@ functions:
           cors: true
   deleteHero:
     handler: hero/delete.deleteHero
-    name: delete-hero-v1
+    name: delete-hero
     memorySize: 128
     timeout: 20
     events:
