--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "aws-sdk": "^2.1194.0",
     "excel4node": "^1.8.0",
+    "fs": "^0.0.1-security",
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^8.3.2"
   }
