--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "aws-sdk": "^2.1194.0",
     "excel4node": "^1.8.0",
     "fs": "^0.0.1-security",
+    "nodemailer": "^6.7.8",
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^8.3.2"
   }
