--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "excel4node": "^1.8.0",
     "fs": "^0.0.1-security",
     "nodemailer": "^6.7.8",
+    "pdfkit": "^0.13.0",
     "serverless-iam-roles-per-function": "^3.2.0",
     "uuid": "^8.3.2"
   }
