--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.1194.0",
+    "chrome-aws-lambda": "^10.1.0",
     "email-validator": "^2.0.4",
     "excel4node": "^1.8.0",
     "fs": "^0.0.1-security",
