--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "chrome-aws-lambda": "^10.1.0",
     "email-validator": "^2.0.4",
     "excel4node": "^1.8.0",
+    "file-type": "^18.0.0",
     "fs": "^0.0.1-security",
+    "moment": "^2.29.4",
     "nodemailer": "^6.7.8",
     "pdfkit": "^0.13.0",
     "serverless-iam-roles-per-function": "^3.2.0",
